<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Golfer</string>
    <string name="username_string">Username</string>
    <string name="password_string">Password</string>
    <string name="enter_username_hint">Enter username</string>
    <string name="enter_password_hint">Enter password</string>
    <string name="login_string">LogIn</string>
    <string name="signup_string">SignUp</string>
    <string name="hello">Hello Android!</string>
    <string name="crear">Crear</string>



    <string name="login_username">Username</string>
    <string name="login_pass">Password</string>
    <string name="login_entrar">Entrar</string>
    <string name="login_signup">¡Regístrate!</string>

    <string name="signup_username">Username</string>
    <string name="signup_handicap">Handicap</string>
    <string name="signup_name">Nombre</string>
    <string name="signup_ape1">Apellido 1</string>
    <string name="signup_ape2">Apellido 2</string>
    <string name="signup_con1">Contraseña</string>
    <string name="signup_con2">Repite contraseña</string>
    <string name="signup_registrar">Registrar</string>
    <string name="signup_cancelar">Cancelar</string>


    <string name="rellenar_datos">Introduzca datos en todos los campos</string>
    <string name="con_dif">Las contraseñas no coinciden</string>
    <string name="con_tam">La contraseña debe tener entre 6 y 25 caracteres</string>
    <string name="name_tam">El nombre debe tener entre 2 y 25 caracteres</string>
    <string name="ape1_tam">El primer apellido debe tener entre 2 y 25 caracteres</string>
    <string name="ape2_tam">El segundo apellido debe tener entre 2 y 25 caracteres</string>
    <string name="user_tam">El username debe tener entre 2 y 25 caracteres</string>


    <string name="title_activity_main">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">¡Bienvenido!</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="confirm_log_out">¿Está seguro de que desea salir?</string>
    <string name="confirm_yes">Sí</string>
    <string name="confirm_no">No</string>
    <string name="message_log_out">¡Hasta pronto!</string>


    <string name="title_activity_maps">Maps</string>


    <string name="signup_field_name">Nombre del campo</string>
    <string name="signup_field_des">Descripción del campo</string>
    <string name="signup_field_num">Número de hoyos</string>
    <string name="signup_field_prov">Provincia</string>
    <string name="signup_field_location">Seleccione la ubicación del campo</string>
    <string name="signup_field_location_button">Seleccionar</string>
    <string name="signup_field_pueblo">Pueblo</string>


    <!--

        <string name="ip_config">10.207.58.150</string>
      -->

    <string name="ip_config">192.168.1.40</string>



    <string-array name="colors">
        <item>red</item>
        <item>orange</item>
        <item>yellow</item>
        <item>green</item>
        <item>blue</item>
        <item>indigo</item>
        <item>violet</item>
        <item>aqua</item>
        <item>black</item>
        <item>fuchsia</item>
        <item>gray</item>
        <item>grey</item>
        <item>lime</item>
        <item>maroon</item>
        <item>navy</item>
        <item>olive</item>
        <item>purple</item>
        <item>silver</item>
        <item>teal</item>
        <item>white</item>
    </string-array>


</resources>
