<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id123"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/signup_field_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_field_name"/>

    <EditText
        android:id="@+id/signup_field_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signup_field_name"
        android:inputType="text"
        tools:ignore="Autofill"/>

    <TextView
        android:id="@+id/signup_field_des_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_field_des"/>

    <EditText
        android:id="@+id/signup_field_des_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signup_field_des"
        android:inputType="text"
        tools:ignore="Autofill"/>

    <TextView
        android:id="@+id/signup_field_location_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_field_location"/>

    <Button
        android:id="@+id/signup_field_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/signup_field_location_button"
        android:inputType="text"
        tools:ignore="Autofill"/>

    <TextView
        android:id="@+id/signup_field_num_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_field_num"/>

    <EditText
        android:id="@+id/signup_field_num_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signup_field_num"
        android:inputType="number"
        tools:ignore="Autofill"/>


    <TextView
        android:id="@+id/signup_field_pueblo_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_field_pueblo" />

     <AutoCompleteTextView
        android:id="@+id/signup_field_pueblo_autocomplete"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signup_field_pueblo"
        android:layout_marginLeft="5dp"
        android:textSize="24sp"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/crear_field_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/crear"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/cancelar_field_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/signup_cancelar"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>