<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height = "match_parent"
    tools:context = ".LogIn">

    <TextView
        android:text = "@string/login_string"
        android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/login_titulo"
        android:textSize = "35sp"
        android:layout_alignParentTop = "true"
        android:layout_centerHorizontal = "true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_imagen"
        android:src="@drawable/ic_launcher"
        android:layout_below="@+id/login_titulo"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/login_username_text"
        android:hint = "@string/login_username"
        android:focusable = "true"
        android:textColorHighlight = "#ff7eff15"
        android:textColorHint = "#ffff25e6"
        android:layout_marginTop = "46dp"
        android:layout_below = "@+id/login_imagen"
        android:layout_alignParentStart = "true"
        android:layout_alignParentEnd = "true"
        android:inputType="text"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/login_pass_text"
        android:layout_below="@+id/login_username_text"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/login_username_text"
        android:textColorHint="#ffff299f"
        android:hint="@string/login_pass" />



    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_below="@id/login_pass_text">

        <Button
            android:id="@+id/button_aceptar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_entrar"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_signup"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</RelativeLayout>